--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title:               My digital garden
+title:               Quorum Sensing Project
 include:             ['_pages']
 exclude:             ['_includes/notes_graph.json']
 # You may need to change the base URL depending on your deploy configuration.
 # Specifically, when using GitHub Pages, the baseurl should point to where GitHub
 # Pages deploys your repository (which is usually the repository name).
-baseurl:             ''
+baseurl:             'https://digitalgarden-qs.netlify.app/'
 
 # If you are using a host that cannot resolve URLs that do
 # not end with .html (such as Neocities), set this to 'true'.
